--- a/style.css
+++ b/style.css
@@ -1,29 +1,14 @@
 html {
   height: 100%;
-/*   box-sizing: border-box; */
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Arial", sans-serif;
   text-align: center;
-/*   box-sizing: border-box; */
-  font-size: 120%;
-  background-color: darkgray;
+  font-size: 100%;
+  background-color: #a2dbb1;
   height: 100%;
   padding: 20px 10px;
-}
-
-textarea:hover,
-input:hover,
-textarea:active,
-input:active,
-textarea:focus,
-input:focus,
-button:focus,
-button:active,
-button:hover {
-  outline:0px !important;
-  -webkit-appearance:none;
 }
 
 #chat-area{
@@ -31,7 +16,6 @@ button:hover {
   overflow-y: auto;
   overflow-x: hidden;
   padding: 25px;
-  box-sizing: border-box;
 }
 
 #compose-area {
@@ -47,45 +31,35 @@ button:hover {
 textarea {
   position:absolute;
   padding:20px 20px;
-  background:#C4B7E1;
+  background:white;
   border:0;
   margin:0;
   box-sizing: border-box;
   height: 100%;
   width: 100%;
-  font-size: 120%;
+  font-family: "Arial", sans-serif;
+  font-size: 100%;
   padding: .5em 10% .5em 2%;
 }
 
 #sendButton {
-  position: absolute;
+  position: fixed;
   bottom: 5px;
   right: 5px;
 }
-
-/* button {
-  position: relative;
-  box-sizing: border-box;
-  border: none;
-  cursor: pointer;
-  margin: 1px;
-  font-size: 120%;
-  background-color: lightgrey;
-  border-radius: 8px;
-} */
 
 #startButton {
   margin: 0 auto;
   text-align: center;
   border-radius: 20px;
-  border: 1px solid black;
-  box-shadow: 3px 3px black;
+  border: 1px solid #7b9e84;
+  box-shadow: 3px 3px #4d6653;
   max-width: 200px;
   cursor: pointer;
-  background-color: seashell;
+  background-color: #7b9e84;
 }
 
-#robot {
+#therapet {
   margin: 0 auto;
   width: 200px;
 }
@@ -114,24 +88,23 @@ textarea {
   width: 24px;
   height: 24px;
   background-size: contain;
-  background-color: darkgray;
-  border: 2px solid darkgray;
+  background-color: white;
+  border: 2px solid white;
   border-radius: 2px;
 
 }
 
 .avatar-bot {
   left: -20px;
-  background-image: url("http://www.reportingforhire.com/wp-content/uploads/2019/08/kawaii-cat-drawing-collection-of-free-download-on-ui-ex.png");
+  background-image: url("https://iconsgalore.com/wp-content/uploads/2018/10/cat-1-featured-2.png");
 }
 
 .avatar-user {
   right: -20px;
-  background-image: url("https://qotoqot.com/sad-animations/img/400/sitting_alone/sitting_alone.png");
+  background-image: url("https://images.vexels.com/media/users/3/134546/isolated/preview/b1b61276fef1c4a683aabaa53833c7ca-emoji-emoticon-sad-face-by-vexels.png");
 }
 
 .chat-bot {
-/*   background-color: #DCDCDC; */
   background-color: #ffb87a;
   padding: 7px 15px;
   float: left;
@@ -144,7 +117,6 @@ textarea {
 }
 
 .chat-user {
-/*   background-color: #9370DB; */
   background-color: #6ed0db;
   padding: 7px 15px;
   text-align: right;
